syntax = "proto3";

package orders;

import "google/protobuf/empty.proto";

message OrderItem {
    int32 id = 1;
    string symbolA = 2; // exchange from
    string symbolB = 3; // exchange to
    float amountB = 4; // amount of token B
    string createdAt = 5; // recorded time when order is created
}

message OrderItems {
    repeated OrderItem orders = 1;
}

service Order {
    rpc GetAll(google.protobuf.Empty) returns (stream OrderItems) {};
    rpc CreateOne(OrderItem) returns (OrderItem) {};
}